--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,15 @@ body {
 .s3 { bottom: -40px; left: 5%;  width: 240px; height: 240px; opacity: .18; }
 .s4 { bottom: 5%; right: 5%;   width: 140px; height: 140px; opacity: .14; }
 
-
+.linky {
+  background: none;
+  border: none;
+  color: var(--rose);
+  text-decoration: underline;
+  cursor: pointer;
+  font: inherit;
+  padding: 0;
+}
 .floaty {
   position: absolute;
   inset: -20%;
