--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,10 @@ body {
 .s3 { bottom: -40px; left: 5%;  width: 240px; height: 240px; opacity: .18; }
 .s4 { bottom: 5%; right: 5%;   width: 140px; height: 140px; opacity: .14; }
 
+#miniBox:not([hidden]) {
+  animation: pop .28s ease-out;
+}
+
 .linky {
   background: none;
   border: none;
